force-app/main/default/objects/Condition__c/fields/Element__c.field-meta.xml
<CustomField>
    <fullName>Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Element</label>
    <referenceTo>Element__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>