force-app/main/default/objects/Condition__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>